--- a/src/assets/fonts/icomoon/demo.html
+++ b/src/assets/fonts/icomoon/demo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;9)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;6)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
@@ -19,124 +19,82 @@
                 <span class="mls"> icon-books</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e920" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe920;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e900" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe900;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="books, library" class="liga unitRight" />
+                <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-file-text"></span>
-                <span class="mls"> icon-file-text</span>
+                <span class="icon-profile"></span>
+                <span class="mls"> icon-profile</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e922" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe922;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e901" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe901;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="file-text, file" class="liga unitRight" />
+                <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-stopwatch"></span>
-                <span class="mls"> icon-stopwatch</span>
+                <span class="icon-progress"></span>
+                <span class="mls"> icon-progress</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e952" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe952;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e902" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe902;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="stopwatch, time5" class="liga unitRight" />
+                <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-bubble"></span>
-                <span class="mls"> icon-bubble</span>
+                <span class="icon-FAQ"></span>
+                <span class="mls"> icon-FAQ</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e96b" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe96b;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e903" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe903;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="bubble, comment" class="liga unitRight" />
+                <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-user-tie"></span>
-                <span class="mls"> icon-user-tie</span>
+                <span class="icon-lesson-len"></span>
+                <span class="mls"> icon-lesson-len</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e976" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe976;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e904" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe904;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="user-tie, user5" class="liga unitRight" />
+                <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-checkmark"></span>
-                <span class="mls"> icon-checkmark</span>
+                <span class="icon-exit"></span>
+                <span class="mls"> icon-exit</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="ea10" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xea10;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e905" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe905;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="checkmark, tick" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-play"></span>
-                <span class="mls"> icon-play</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="ea15" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xea15;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="play2, player" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-pause"></span>
-                <span class="mls"> icon-pause</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="ea16" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xea16;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="pause, player2" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-checkbox-checked"></span>
-                <span class="mls"> icon-checkbox-checked</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="ea52" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xea52;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="checkbox-checked, checkbox" class="liga unitRight" />
+                <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
     </div>
